objects/ASI_CRM_ContractSalesStaffIncentive__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AchievedBtl__c</fullName>
        <label>Achieved (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CashInc__c</fullName>
        <label>Cash Inc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ContractTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Target</label>
        <referenceTo>ASI_CRM_ContractTarget__c</referenceTo>
        <relationshipLabel>Contract Sales &amp; Staff Incentives</relationshipLabel>
        <relationshipName>Sales_Staff_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Contract Sales &amp; Staff Incentives</relationshipLabel>
        <relationshipName>Sales_Staff_Incentives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CrossBrandSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Users can select SKU that is different from Target SKU</inlineHelpText>
        <label>Cross Brand SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Contract Sales &amp; Staff Incentives (Cross Brand SKU)</relationshipLabel>
        <relationshipName>Sales_Staff_Incentives_CrossBrand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclude__c</fullName>
        <description>Exclude in Report or Calculation</description>
        <formula>AND(
 OR(ISBLANK(ASI_CRM_AchievedBtl__c), ASI_CRM_AchievedBtl__c = 0),
 OR(ISBLANK(ASI_CRM_FOCWS__c), ASI_CRM_FOCWS__c = 0),
 OR(ISBLANK(ASI_CRM_FOCPRM__c), ASI_CRM_FOCPRM__c = 0),
 OR(ISBLANK(ASI_CRM_CashInc__c), ASI_CRM_CashInc__c = 0)
)</formula>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOCPRM__c</fullName>
        <label>FOC (PRM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOCWS__c</fullName>
        <label>FOC (WS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDECOA__c</fullName>
        <label>JDE COA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MinSPBtl__c</fullName>
        <label>Min. SP (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PackFactor__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Pack_Factor__c</formula>
        <label>Pack Factor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packaging_Size__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Packaging_Size__c</formula>
        <label>Packaging Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product__c</fullName>
        <formula>ASI_CRM_SKU__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKUCode__c</fullName>
        <formula>ASI_CRM_SKU__r.Name</formula>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Effective SKU (not Target SKU, still they can be the same)</inlineHelpText>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Contract Sales &amp; Staff Incentives</relationshipLabel>
        <relationshipName>Sales_Staff_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Revenue__c</fullName>
        <label>Sales Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SetupCode__c</fullName>
        <label>Setup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Contract Sales &amp; Staff Incentive</label>
    <nameField>
        <displayFormat>SSID{00000000}</displayFormat>
        <label>SSID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Sales &amp; Staff Incentives</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_SalesStaffIncentive</fullName>
        <active>true</active>
        <label>Contract Sales &amp; Staff Incentive (MY)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Contract_YTD_Achievement</fullName>
        <active>true</active>
        <label>Contract YTD Achievement (SG)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>